force-app/main/default/objects/Unreviewed_Object_Wrapper__c/Unreviewed_Object_Wrapper__c.object-meta.xml
<CustomObject>
    <description>Custom object for Event and Task</description>
    <label>QA Unreviewed_Object_Wrapper</label>
    <nameField>
        <label>Unreviewed  Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Unreviewed Object Wrappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>