force-app/main/default/objects/Unreviewed_Object_Wrapper__c/fields/Object_Wrapper_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Wrapper_Id__c</fullName>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>