force-app/main/default/objects/Unreviewed_Object_Wrapper__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>