force-app/main/default/objects/Unreviewed_Object_Wrapper__c/fields/ShownAs__c.field-meta.xml
<CustomField>
    <fullName>ShownAs__c</fullName>
    <label>ShownAs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>